bindings/php/include/itb.h

/* FFI-ready declarations for the libitb Triple Pipeline surface.
 *
 * Derived from dist/<os>-<arch>/libitb.h (generated by cmd/cshared).
 * PHP's FFI parser accepts plain C declarations only — no
 * preprocessor directives, no system includes — so the cgo prologue
 * is replaced by the three fixed-width typedefs below. The layout
 * targets 64-bit LP64 platforms (Linux / macOS): size_t and
 * uintptr_t are unsigned long, int64_t is long long.
 *
 * Every declaration must stay signature-identical to the generated
 * header; the binding performs no marshalling beyond what these
 * prototypes describe. */

typedef unsigned long size_t;
typedef unsigned long uintptr_t;
typedef long long int64_t;

/* Diagnostics + runtime knobs. */
int ITB_Version(char* out, size_t capBytes, size_t* outLen);
int ITB_HashCount(void);
int ITB_HashName(int i, char* out, size_t capBytes, size_t* outLen);
int ITB_HashWidth(int i);
int ITB_LastError(char* out, size_t capBytes, size_t* outLen);
int64_t ITB_SetMemoryLimit(int64_t limit);
int ITB_SetGCPercent(int pct);

/* Triple Pipeline lifecycle. */
int ITB_Triple_Init(const char* profile, const char* opts, char* blobOut, size_t blobCap, size_t* blobLen, uintptr_t* outHandle);
int ITB_Triple_Open(const char* profile, const char* blob, size_t blobLen, const char* opts, const char* permMaster, size_t permMasterLen, const char* wrapMaster, size_t wrapMasterLen, size_t mastersCount, uintptr_t* outHandle);
int ITB_Triple_Rekey(uintptr_t handle, const char* permMaster, size_t permMasterLen, const char* wrapMaster, size_t wrapMasterLen, char* blobOut, size_t blobCap, size_t* blobLen);
int ITB_Triple_Close(uintptr_t handle);
int ITB_Triple_Free(uintptr_t handle);
int ITB_Triple_RegisterProfile(const char* name, const char* opts);

/* Buffer-in / buffer-out cipher calls. */
int ITB_Triple_EncryptStream(uintptr_t handle, const char* plaintext, size_t ptlen, char* out, size_t outCap, size_t* outLen);
int ITB_Triple_DecryptStream(uintptr_t handle, const char* wire, size_t wireLen, char* out, size_t outCap, size_t* outLen);
int ITB_Triple_EncryptMessage(uintptr_t handle, const char* plaintext, size_t ptlen, char* out, size_t outCap, size_t* outLen);
int ITB_Triple_DecryptMessage(uintptr_t handle, const char* wire, size_t wireLen, char* out, size_t outCap, size_t* outLen);

/* Incremental stream sessions. */
int ITB_Triple_EncryptStreamBegin(uintptr_t pipe, uintptr_t* outStream);
int ITB_Triple_DecryptStreamBegin(uintptr_t pipe, uintptr_t* outStream);
int ITB_Triple_StreamWrite(uintptr_t stream, const char* src, size_t srcLen);
int ITB_Triple_StreamEnd(uintptr_t stream);
int ITB_Triple_StreamRead(uintptr_t stream, char* out, size_t outCap, size_t* outLen, int* finished);
int ITB_Triple_StreamFree(uintptr_t stream);